feat: create database schema and init db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=EventShuffle
+## Copy-paste-pirate Captain: https://www.baeldung.com/java-h2-automatically-create-schemas
+spring.datasource.url=jdbc:h2:mem:eventshuffle;INIT=RUNSCRIPT FROM 'src/main/resources/init.sql';
+## enables web console on localhost:8080/h2-console
+spring.h2.console.enabled=true
